# Hackville2026-Pathfinder-AI

./: .gitignore  .hintrc  INTENT_FLOW.md  IOS_SETUP.md  NGROK_SETUP.md  PHONE_SETUP.md  README.md  WEB_UI_SETUP.md  client_orchestrator.py  debug_gemini.py  debug_import.py  dummy_image.txt  prompt_manager.py  pyproject.toml  requirements.txt  setup_phone_camera.bat  start_server.ps1  test_command.py  test_navigation.py  test_pipeline.py  test_vision_direct.py  voice_nav_backend.py
app/: main.py
backend/: NGROK_SETUP.md  QUICKSTART.md  prompt_manager.py  start_server.ps1
backend/app/: main.py
backend/routes/: brain.py  command.py  navigation.py  vision.py
backend/voice_nav_backend/: __init__.py
frontend/: .env  SETUP.md  package-lock.json  package.json  tailwind.config.ts  test.html  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: BottomNavigation.tsx  Layout.tsx  Logo.tsx  PhoneSonarAnimation.tsx  StatusOrb.tsx
frontend/src/hooks/: useAudioAnalyzer.ts  useMediaDevices.ts  useVoiceAnnouncement.ts  useVoiceRecognition.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Accessibility.tsx  Assist.tsx  Assist.tsx.backup  HowItWorks.tsx  Index.tsx
routes/: brain.py  command.py  speech.py  vision.py
static/: index.html
