[project]
name = "voice-nav-backend"
version = "0.1.0"
description = "Voice-first assistive navigation backend for PathFinder AI"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [ { name = "Vivek Panjabi" } ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
